content/_generated-doc/2.7/config/quarkus-kafka-kafka-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kafka-kafka-build-time-config_configuration]]link:#quarkus-kafka-kafka-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.health.enabled]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.health.enabled[quarkus.kafka.health.enabled]`

[.description]
--
Whether or not an health check is published in case the smallrye-health extension is present. 
 If you enable the health check, you must specify the `kafka.bootstrap.servers` property.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.snappy.enabled]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.snappy.enabled[quarkus.kafka.snappy.enabled]`

[.description]
--
Whether or not to enable Snappy in native mode. 
 Note that Snappy requires GraalVM 21{plus} and embeds a native library in the native executable. This library is unpacked and loaded when the application starts.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.enabled]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.enabled[quarkus.kafka.devservices.enabled]`

[.description]
--
If Dev Services for Kafka has been explicitly enabled or disabled. Dev Services are generally enabled by default, unless there is an existing configuration present. For Kafka, Dev Services starts a broker unless `kafka.bootstrap.servers` is set or if all the Reactive Messaging Kafka channel are configured with a `bootstrap.servers`.
--|boolean 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.port]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.port[quarkus.kafka.devservices.port]`

[.description]
--
Optional fixed port the dev service will listen to. 
 If not defined, the port will be chosen randomly.
--|int 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.image-name]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.image-name[quarkus.kafka.devservices.image-name]`

[.description]
--
The Kafka image to use. Note that only Redpanda images are supported. See https://vectorized.io/docs/quick-start-docker/ and https://hub.docker.com/r/vectorized/redpanda
--|string 
|`docker.io/vectorized/redpanda:v21.11.2`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.shared]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.shared[quarkus.kafka.devservices.shared]`

[.description]
--
Indicates if the Kafka broker managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Kafka starts a new container. 
 The discovery uses the `quarkus-dev-service-kafka` label. The value is configured using the `service-name` property. 
 Container sharing is only used in dev mode.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.service-name]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.service-name[quarkus.kafka.devservices.service-name]`

[.description]
--
The value of the `quarkus-dev-service-kafka` label attached to the started container. This property is used when `shared` is set to `true`. In this case, before starting a container, Dev Services for Kafka looks for a container with the `quarkus-dev-service-kafka` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `quarkus-dev-service-kafka` label set to the specified value. 
 This property is used when you need multiple shared Kafka brokers.
--|string 
|`kafka`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.topic-partitions-timeout]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.topic-partitions-timeout[quarkus.kafka.devservices.topic-partitions-timeout]`

[.description]
--
Timeout for admin client calls used in topic creation. 
 Defaults to 2 seconds.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`2S`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.redpanda.transaction-enabled]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.redpanda.transaction-enabled[quarkus.kafka.devservices.redpanda.transaction-enabled]`

[.description]
--
Enables transaction support. Also enables the producer idempotence. Find more info about Red Panda transaction support on link:https://vectorized.io/blog/fast-transactions/[https://vectorized.io/blog/fast-transactions/]. Notice that link:https://cwiki.apache.org/confluence/display/KAFKA/KIP-447%3A+Producer+scalability+for+exactly+once+semantics[KIP-447 (producer scalability for exactly once semantic)] and link:https://cwiki.apache.org/confluence/pages/viewpage.action?pageId=89068820[KIP-360 (Improve reliability of idempotent/transactional producer)] are *not* supported.
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.topic-partitions-topic-partitions]]`link:#quarkus-kafka-kafka-build-time-config_quarkus.kafka.devservices.topic-partitions-topic-partitions[quarkus.kafka.devservices.topic-partitions]`

[.description]
--
The topic-partition pairs to create in the Dev Services Kafka broker. After the broker is started, given topics with partitions are created, skipping already existing topics. For example, `quarkus.kafka.devservices.topic-partitions.test=2` will create a topic named `test` with 2 partitions. 
 The topic creation will not try to re-partition existing topics with different number of partitions.
--|`Map<String,Integer>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
